style.css
/* Default fonts,backgroun color */

body {
  background-color: #ffe8d4;
  margin: 0;
  padding: 0;
  font-family: "Agdasima", "Montserrat", "Quicksand", "Space Mono", sans-serif;
}

/* Nav bar STARTS */
nav,
.nav-ul {
  width: 100vw;
  height: 3.21rem;
  background-color: #0f7173;
  padding-top: 0;
}

nav ul {
  padding: 0;
  margin: 0;
  list-style-type: none;
}

.navList a,
.navList {
  padding: 5.6px;
  color: white;
  text-decoration: none;
  float: left;
  text-align: center;
  display: block;
  font-weight: bold;
  font-size: large;
  border: 2px solid transparent;
  text-align: center;
}

.navList:hover {
  background-color: #064648;
  border: 2px solid #064648; /* Modified border style */
}

/* The gamepade icon */
#justbutton {
  border: none;
  margin: 0;
  background-color: transparent;
  padding: 0px;
}
/* ENDS */

/* Nav bar ENDS */

/* Joseph Resource hub Edits */
h1 .JosephFirstText {
  color: #052324;
  font-size: 40px;
  padding: 6.7px;
}

h1 .ResourceHubFirstText {
  color: #0f7173;
  font-size: 28px;
}

/* ENDS */

/* My introduction paragraph */
.intropara {
  text-align: left;
  padding-right: 60%;
  font-size: 24px;
  margin: 6.5px;
  color: #052324;
}
/* ENDS */

.SpaceControl {
  margin: 50px;
}

/* Game UI */
.container1,
.container2,
.container3 {
  display: flex;
  flex-direction: row;
  justify-content: center;
  width: 400px;
  align-items: self-start;
  visibility: hidden;
  margin-left: 6.7px;
}

.container1 > button,
.container2 > div,
.container3 > div {
  padding: 10px;
  text-align: center;
  font-size: 2.0rem;
  color: #052324;
  flex: 1;
  border: none;
}

/* Color of the button JS,HTML,CSS START */

.container1 > button:nth-child(1) {
  background-color: #ffd500;
  color: black;
}

.container1 > button:nth-child(2) {
  background-color: rgb(255, 115, 0);
  color: black;
}

.container1 > button:nth-child(3) {
  background-color: rgba(0, 179, 255, 0.887);
  color: black;
}

.container2 > div:nth-child(1) {
  background-color: #0f7173;
  color: black;
}

/* Color of the button JS,HTML,CSS END */

/* Hover effects for buttons STARTS */

.container1 > button:nth-child(1):hover {
  background-color: #9e8b1e;
}

.container1 > button:nth-child(2):hover {
  background-color: #965c15;
}

.container1 > button:nth-child(3):hover {
  background-color: #1d6fa6;
}

/* Hover effects for buttons ENDS */

/* ENDS */

